--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -9,7 +9,7 @@
     </div>
     <!-- ============================================================== -->
     <!-- Main wrapper - style you can find in pages.scss -->
-    <!-- ============================================================== -->
+    <!-- =====DAYANA P========================================================= -->
     <section id="wrapper" class="login-register login-sidebar" style="background-image:url(../assets/images/background/fondoNY.jpg);">
         <div class="login-box card">
             <div class="card-body">
