--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -368,14 +368,14 @@
           <!-- ============================================================== -->
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle waves-effect waves-dark" href="" data-toggle="dropdown"
-              aria-haspopup="true" aria-expanded="false"><img src="/assets/images/users/4.jpg" alt="user"
+              aria-haspopup="true" aria-expanded="false"><img src="/assets/images/users/icon.jpg" alt="user"
                 class="profile-pic" /></a>
             <div class="dropdown-menu dropdown-menu-right animated flipInY">
               <ul class="dropdown-user">
                 <li>
                   <div class="dw-user-box">
                     <div class="u-img">
-                      <img src="./assets/images/users/4.jpg" alt="user" />
+                      <img src="./assets/images/users/01.jpeg" alt="user" />
                     </div>
                     <div class="u-text">
                       <h4>DAYANA PEREZ</h4>
