--- a/src/app/web/dashboard/dashboard.component.html
+++ b/src/app/web/dashboard/dashboard.component.html
@@ -6,14 +6,13 @@
             <app-breadcrumbs></app-breadcrumbs>
         </div>
     </div>
-    <!--DAYANA PEREZ <p>Rutas</p>
-    <div class="row">
+        <div class="row">
         <div class="col-12">
             <div class="card">
-                <div class="card-body">
+                <div class="card-body" style="margin-left: 25%;">
                     <router-outlet></router-outlet>
                 </div>
             </div>
         </div>
-    </div> -->
+    </div>
 </div>
