--- a/src/app/web/category/category.component.html
+++ b/src/app/web/category/category.component.html
@@ -1,1 +1,4 @@
-<p>category works!</p>
+<div class="h1-category">
+    <h1>Estas son categorias</h1>
+</div>
+<img src="https://media.admagazine.com/photos/64bea56855875a8da74b3010/3:2/w_3153,h_2102,c_limit/rev-1-BARBIE-TP-0002_High_Res_JPEG.jpeg" alt="" srcset="">
