--- a/src/app/web/dashboard/dashboard.component.html
+++ b/src/app/web/dashboard/dashboard.component.html
@@ -4,15 +4,16 @@
     <div class="page-wrapper">
         <div class="container-fluid">
             <app-breadcrumbs></app-breadcrumbs>
+            <router-outlet></router-outlet>
         </div>
     </div>
-        <div class="row">
+       <!--  <div class="row">
         <div class="col-12">
             <div class="card">
                 <div class="card-body" style="margin-left: 25%;">
-                    <router-outlet></router-outlet>
+                   
                 </div>
             </div>
         </div>
-    </div>
+    </div>  -->
 </div>
